@@ -24,6 +24,7 @@ Date: ???
     - Updated crystallization recipe icons
     - Unsubscribe from relevant event handlers after home rock has been placed / all tutorial techs have been unlocked
     - Added table of starting tech and items for YAFC to read
+    - Added remote interface to allow other mods to modify starting tech and items
   Bugfixes:
     - Fixed crash when Train Construction Site is enabled
     - Fixed Forage for cellulose fiber recipe not usable with mods that replace the default character
